--- a/package.json
+++ b/package.json
@@ -14,12 +14,16 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.18",
     "@mui/material": "^5.15.18",
+    "@react-oauth/google": "^0.12.1",
+    "axios": "^1.7.2",
     "flowbite-react": "^0.9.0",
+    "jwt-decode": "^4.0.0",
     "multi-range-slider-react": "^2.0.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.5",
     "react-icons": "^5.2.1",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.23.1",
     "swiper": "^11.1.3"
   },
