--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "@mui/icons-material": "^5.15.18",
     "@mui/material": "^5.15.18",
     "@react-oauth/google": "^0.12.1",
-    "axios": "^1.7.2",
     "flowbite-react": "^0.9.0",
     "jwt-decode": "^4.0.0",
+    "lottie-react": "^2.4.0",
     "multi-range-slider-react": "^2.0.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
