--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.15.18",
     "@mui/material": "^5.15.18",
     "@react-oauth/google": "^0.12.1",
+    "axios": "^1.7.2",
     "flowbite-react": "^0.9.0",
     "jwt-decode": "^4.0.0",
     "lottie-react": "^2.4.0",
