--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.5",
     "react-icons": "^5.2.1",
+    "react-phone-input-2": "^2.15.1",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.23.1",
+    "react-spinners": "^0.13.8",
     "swiper": "^11.1.3"
   },
   "devDependencies": {
