--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^5.15.18",
     "@react-oauth/google": "^0.12.1",
     "axios": "^1.7.2",
+    "date-fns": "^3.6.0",
     "flowbite-react": "^0.9.0",
     "jwt-decode": "^4.0.0",
     "lottie-react": "^2.4.0",
