--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-phone-input-2": "^2.15.1",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.23.1",
+    "react-select-country-list": "^2.2.3",
     "react-spinners": "^0.13.8",
     "swiper": "^11.1.3"
   },
