--- a/package.json
+++ b/package.json
@@ -18,18 +18,20 @@
     "axios": "^1.7.2",
     "date-fns": "^3.6.0",
     "flowbite-react": "^0.9.0",
+    "framer-motion": "^11.3.22",
     "jwt-decode": "^4.0.0",
     "lottie-react": "^2.4.0",
     "multi-range-slider-react": "^2.0.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.51.5",
+    "react-hook-form": "^7.52.2",
     "react-icons": "^5.2.1",
     "react-lazy-load-image-component": "^1.6.2",
     "react-phone-input-2": "^2.15.1",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.23.1",
     "react-select-country-list": "^2.2.3",
+    "react-shimmer": "^3.2.0",
     "react-spinners": "^0.13.8",
     "swiper": "^11.1.3"
   },
