--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "d4d",
+  "name": "Hezqa",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -32,7 +32,9 @@
     "react-router-dom": "^6.23.1",
     "react-select-country-list": "^2.2.3",
     "react-shimmer": "^3.2.0",
+    "react-shimmer-effects": "^1.0.3",
     "react-spinners": "^0.13.8",
+    "styled-components": "^6.1.12",
     "swiper": "^11.1.3"
   },
   "devDependencies": {
